appId: ${APP_ID}
---
- launchApp
- tapOn:
    label: "Go to drawing page"
    text: "Drawing.*"
- swipe:
    start: "10%,13%"
    end: "60%,33%"
    duration: 200
- swipe:
    start: "40%,59%"
    end: "77%,70%"
    duration: 200
- swipe:
    start: "39%,59%"
    end: "7%,73%"
    duration: 200
- swipe:
    start: "15%,44%"
    end: "65%,45%"
    duration: 200
- swipe:
    start: "14%,34%"
    end: "70%,17%"
    duration: 200
- swipe:
    start: "40%,18%"
    end: "39%,59%"
    duration: 200
- takeScreenshot: DrawingPageActual
- runScript:
    label: "Compare Images"
    file: scripts/image-compare.js
    env:
      baseline: "DrawingPageExpected.png"
      current: "DrawingPageActual.png"
- evalScript: ${console.log(output.diff)}
- assertTrue:
    label: "Images are similar"
    condition: ${output.diff * 100 <= 30}
